--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         maven {
             url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
         }
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
