--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    implementation project(':mqtt')
-    implementation 'com.github.niulinguo:MqttModule:v1.0'
+    implementation project(':mqtt')
+//    implementation 'com.github.niulinguo:MqttModule:v1.0'
 
     implementation 'com.blankj:utilcode:1.20.0'
 }
